--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -3,32 +3,11 @@
   margin-top: -10px;
   margin-bottom: 75px;
 
-  @media #{$tablet-width} {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 auto;
-    margin-bottom: 100px;
-  }
-
-  @media #{$desctop-width} {
-    width: 72%;
-    margin-top: -40px;
-  }
-/*???*/
   &__login {
     outline: 1px solid black;
     margin: 20px;
     margin-bottom: 25px;
     text-align: right;
-
-    @media #{$tablet-width} {
-      width: 50%;
-      margin: 0;
-      margin-bottom: 45px;
-    }
-
-    @media #{$desctop-width} {
-    }
 
     label {
       margin-right: 15px;
@@ -47,9 +26,6 @@
   &__login-name {
     margin-bottom: 22px;
 
-    @media #{$tablet-width} {
-      margin-top: 57px;
-}
     label {
       margin-right: 18px;
     }
@@ -68,45 +44,17 @@
     text-align: center;
     text-transform: uppercase;
     border-top: 1px solid #e5e5e5;
-
-    &--width {
-      @media #{$tablet-width} {
-        width: 42%;
-        margin: 0 auto;
-      }
-    }
-
-    @media #{$tablet-width} {
-      margin-top: 10px;
-      font-size: 21px;
-      border: none;
-    }
   }
-/*???*/
+
   &__contacts {
     outline: 1px solid black;
     margin: 20px;
     text-align: left;
 
-    @media #{$tablet-width} {
-      width: 84%;
-      @include flex-column;
-      margin: 0 auto;
-      margin-bottom: 18px;
-    }
-
-    @media #{$desctop-width} {
-      width: 100%;
-    }
-
     label {
       outline: 1px solid black;
       margin-left: 23px;
       color: $c_gray;
-
-      @media #{$tablet-width} {
-        /*align-self: flex-start;*/
-      }
     }
     input[type="tel"], input[type="email"] {
       width: 83%;
@@ -115,10 +63,6 @@
       font-size: 17px;
       background-color: #f2f2f2;
       border: none;
-
-      @media #{$tablet-width} {
-        width: 93%;
-      }
     }
   }
 
@@ -134,10 +78,6 @@
     margin-left: 24px;
     color: #ff5c5c;
     text-transform: none;
-
-    @media #{$tablet-width} {
-      /*align-self: flex-end;*/
-    }
   }
 
   &__impression {
@@ -146,15 +86,6 @@
     font-weight: 700;
     text-transform: none;
     text-align: left;
-
-    @media #{$tablet-width} {
-      width: 50%;
-      margin-bottom: 45px;
-      order: -1;
-    }
-
-    @media #{$desctop-width} {
-    }
   }
 
   &__impression-list {
@@ -164,58 +95,29 @@
       margin-top: 37px;
       margin-bottom: 43px;
       margin-left: 45px;
-
-      @media #{$tablet-width} {
-        margin-top: 60px;
-        margin-bottom: 0;
-        margin-left: 80px;
-      }
     }
     input[type="radio"] {
       margin-right: 38px;
     }
   }
-/*???*/
+
   &__attractions {
     outline: 1px solid black;
     font-size: 18px;
     font-weight: 700;
     text-transform: none;
     text-align: left;
-
-    @media #{$tablet-width} {
-      width: 100%;
-      margin-bottom: 28px;
-    }
   }
 
   &__attractions-list {
     outline: 1px solid black;
     @include list-clear;
 
-    @media #{$tablet-width} {
-      width: 61%;
-      margin: 0 auto;
-      padding-bottom: 10px;
-      display: flex;
-      flex-wrap: wrap;
-    }
-
-    @media #{$desctop-width} {
-      width: 100%;
-    }
-
     li {
       outline: 1px solid black;
       margin-top: 31px;
       margin-bottom: 54px;
       margin-left: 45px;
-
-      @media #{$tablet-width} {
-        margin: 0 auto;
-        margin-top: 58px;
-        margin-bottom: 10px;
-      }
     }
     input[type="checkbox"] {
       margin-right: 40px;
@@ -227,27 +129,12 @@
     margin-top: -13px;
     margin-bottom: 40px;
 
-    @media #{$tablet-width} {
-      width: 100%;
-      margin: 0;
-      margin-bottom: 52px;
-    }
-
     textarea {
       width: 75%;
       height: 120px;
       padding: 18px;
       font-size: 18px;
       font-weight: 700;
-
-      @media #{$tablet-width} {
-        width: 80%;
-        margin-top: 35px;
-      }
-
-      @media #{$desctop-width} {
-        width: 95%;
-      }
     }
   }
   button {
@@ -260,13 +147,112 @@
     color: $c_white;
     background-color: $c_base;
     border: none;
+  }
+}
 
-    @media #{$tablet-width} {
+@media #{$tablet-width} {
+  .form {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    margin-bottom: 100px;
+
+    &__login {
+      width: 50%;
+      margin: 0;
+      margin-bottom: 45px;
+    }
+    &__login-name {
+      margin-top: 57px;
+    }
+    &__title {
+      margin-top: 10px;
+      font-size: 21px;
+      border: none;
+
+      &--width {
+        width: 42%;
+        margin: 0 auto;
+      }
+    }
+    &__contacts {
+      width: 84%;
+      @include flex-column;
+      margin: 0 auto;
+      margin-bottom: 18px;
+
+      input[type="tel"], input[type="email"] {
+        width: 93%;
+      }
+    }
+    &__impression {
+      width: 50%;
+      margin-bottom: 45px;
+      order: -1;
+    }
+    &__impression-list {
+
+      li {
+        margin-top: 60px;
+        margin-bottom: 0;
+        margin-left: 80px;
+      }
+    }
+    &__attractions {
+      width: 100%;
+      margin-bottom: 28px;
+    }
+    &__attractions-list {
+      width: 61%;
+      margin: 0 auto;
+      padding-bottom: 10px;
+      display: flex;
+      flex-wrap: wrap;
+
+      li {
+        margin: 0 auto;
+        margin-top: 58px;
+        margin-bottom: 10px;
+      }
+    }
+    &__emotions {
+      width: 100%;
+      margin: 0;
+      margin-bottom: 52px;
+
+      textarea {
+        width: 80%;
+        margin-top: 35px;
+      }
+    }
+    button {
       width: 40%;
       margin-left: 65px;
     }
+  }
+}
 
-    @media #{$desctop-width} {
+@media #{$desctop-width} {
+  .form {
+    width: 72%;
+    margin-top: -40px;
+
+    &__contacts {
+      width: 100%;
+    }
+
+    &__attractions-list {
+      width: 100%;
+    }
+
+    &__emotions {
+
+      textarea {
+        width: 95%;
+      }
+    }
+
+    button {
       width: 50%;
       margin-left: 0;
     }
