--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -33,10 +33,6 @@
     label {
       width: 35px;
     }
-
-    input[type="text"] {
-      /*width: 68%;*/
-    }
   }
 
   &__login-name,&__login-surname, &__login-middlename {
@@ -321,6 +317,9 @@
     }
     &__line:after {
       right: 0;
+    }
+    &__line:before {
+      left: 0;
     }
   }
 }
