--- a/sass/blocks/gallery.scss
+++ b/sass/blocks/gallery.scss
@@ -39,11 +39,13 @@
 
     img {
       width: 100%;
-      height: 280px;
+      height: auto;
+      display: block;
       margin-bottom: 5px;
 
       @media #{$tablet-width} {
         height: 268px;
+        margin-bottom: 0;
       }
       @media #{$desctop-width} {
         margin-bottom: -8px;
@@ -63,7 +65,9 @@
     box-sizing: border-box;
 
     @media #{$tablet-width} {
-      @include flex-column;
+      display: flex;
+      justify-content: space-between;
+      padding: 15px;
       background-color: #f2f2f2;
     }
 
@@ -104,13 +108,12 @@
 
   &__like {
     font-weight: 700;
-    margin-left: 37px;
     text-decoration: none;
     color: $c_black;
 
     @media #{$tablet-width} {
-      margin-top: 13px;
-    }
+      align-self: center;
+}
 
     @media #{$desctop-width} {
       color: $c_white;
