--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -1,32 +1,78 @@
 .content {
+  @include container-fluid;
 
-  &__welcome {
-    margin-bottom: 30px;
+  &__welcome, &__mini-welcome {
+    position: relative;
+    top: -20px;
+    min-height: 391px;
+    margin-bottom: 40px;
+    background-color: #e4f1f9;
+    background-image: url("../../img/bg-back-mobile.jpg");
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media (min-resolution: 144dpi),
+           (min-resolution: 1.5dppx) {
+      background-image: url("../../img/bg-back-mobile@2x.jpg");
+    }
 
     @media #{$tablet-width} {
+      top: 5px;
+      height: 520px;
       margin-bottom: 40px;
+      background-image: url("../../img/bg-back-desktop.jpg");
+
+      @media (min-resolution: 144dpi),
+             (min-resolution: 1.5dppx) {
+      background-image: url("../../img/bg-back-desktop@2x.jpg");
+      }
     }
 
     img {
-      width: 100%;
-      height: 390px;
-      margin-top: -35px;
+      position: relative;
+      top: 15%;
+      width: 90%;
+      min-height: 391px;
+      display: block;
+      margin: 0 auto;
+      padding-top: 20px;
+      padding-bottom: 20px;
 
       @media #{$tablet-width} {
-        height: 520px;
-        margin-top: 5px;
-      }
-      @media #{$desctop-width} {
-        max-width: 1200px;
-        height: 518px;
+        padding-top: 0;
       }
     }
   }
 
+  &__welcome:after, &__mini-welcome:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 72px;
+    background: url(../../img/bg-intro-triangle-mobile.svg) bottom center no-repeat;
+    background-size: cover;
+
+    @media #{$tablet-width} {
+      background: url(../../img/bg-intro-triangle-tablet.svg) bottom center no-repeat;
+      background-size: cover;
+    }
+
+    @media #{$desctop-width} {
+      background: url(../../img/bg-intro-triangle-desktop.svg) bottom center no-repeat;
+      background-size: cover;
+    }
+  }
+
   &__mini-welcome {
+    min-height: 160px;
+    height: 160px;
     margin-bottom: 30px;
 
     @media #{$tablet-width} {
+      height: 300px;
       margin-bottom: 65px;
     }
 
@@ -34,17 +80,12 @@
       margin-bottom: 102px;
     }
     img {
-      width: 100%;
-      height: 158px;
-      margin-top: -36px;
+      top: 5%;
+      width: 70%;
+      min-height: 80px;
 
       @media #{$tablet-width} {
-        height: 290px;
-        margin-top: 4px;
-      }
-      @media #{$desctop-width} {
-        width: 1200px;
-        height: 302px;
+        top: 33%;
       }
     }
   }
