--- a/sass/blocks/page-header.scss
+++ b/sass/blocks/page-header.scss
@@ -1,9 +1,14 @@
 .page-header{
   position: relative;
+  z-index: 10;
 
   &__logo{
+    width: 102px;
+    margin: 0 auto;
+    display: block;
 
     @media #{$tablet-width} {
+      width: auto;
       position: absolute;
       top: 0;
       left: 50%;
@@ -11,8 +16,14 @@
   }
 
     img {
-      width: 103px;
-      height: 83px;
+      max-width: 100%;
+      height: auto;
+      display: block;
+
+      @media #{$desctop-width} {
+        width: 187px;
+        height: 97px;
+      }
     }
   }
 }
