--- a/sass/blocks/content.scss
+++ b/sass/blocks/content.scss
@@ -1,9 +1,10 @@
 .content {
+  width: 100%;
   @include container-fluid;
 
   &__welcome, &__mini-welcome {
     position: relative;
-    top: -20px;
+    top: -30px;
     min-height: 391px;
     margin-bottom: 40px;
     background-color: #e4f1f9;
@@ -20,7 +21,6 @@
     @media #{$tablet-width} {
       top: 5px;
       height: 520px;
-      margin-bottom: 40px;
       background-image: url("../../img/bg-back-desktop.jpg");
 
       @media (min-resolution: 144dpi),
@@ -69,7 +69,7 @@
   &__mini-welcome {
     min-height: 160px;
     height: 160px;
-    margin-bottom: 30px;
+    margin-bottom: 7px;
 
     @media #{$tablet-width} {
       height: 300px;
@@ -77,7 +77,7 @@
     }
 
     @media #{$desctop-width} {
-      margin-bottom: 102px;
+      margin-bottom: 115px;
     }
     img {
       top: 5%;
