--- a/sass/blocks/form.scss
+++ b/sass/blocks/form.scss
@@ -1,10 +1,9 @@
 .form {
-  @include container-fluid;
+  margin: 20px;
   margin-top: -10px;
   margin-bottom: 75px;
 
   &__login {
-    margin: 20px;
     margin-bottom: 25px;
 
     label {
@@ -56,7 +55,7 @@
   }
 
   &__contacts {
-    margin: 20px;
+    margin-bottom: 20px;
     text-align: left;
 
     label {
@@ -111,15 +110,40 @@
   }
 
   &__impression-list {
+    margin-top: 25px;
     @include list-clear;
 
     li {
-      margin-top: 37px;
-      margin-bottom: 43px;
-      margin-left: 45px;
+      position: relative;
+      margin-bottom: 15px;
+      margin-left: 35px;
+      padding: 15px 70px;
     }
-    input[type="radio"] {
+
+    input {
+      display: none;
       margin-right: 38px;
+    }
+    input[type="radio"] + label:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 55px;
+      height: 55px;
+      background-color: $c_icon;
+      border-radius: 50%;
+    }
+
+    input[type="radio"]:checked + label:after {
+      content: "";
+      position: absolute;
+      top: 18px;
+      left: 18px;
+      width: 20px;
+      height: 20px;
+      background-color: $c_black;
+      border-radius: 50%;
     }
   }
 
@@ -134,12 +158,37 @@
     @include list-clear;
 
     li {
+      position: relative;
       margin-top: 31px;
       margin-bottom: 54px;
-      margin-left: 45px;
+      margin-left: 35px;
+      padding: 15px 70px;
     }
-    input[type="checkbox"] {
+    input {
+      display: none;
       margin-right: 40px;
+    }
+
+    input[type="checkbox"] + label:before {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 55px;
+      height: 55px;
+      background-color: $c_icon;
+      border-radius: 10%;
+    }
+
+    input[type="checkbox"]:checked + label:after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 15px;
+      width: 100%;
+      height: 100%;
+      background: url("../../img/icon-tick.svg") left no-repeat;
+      background-size: 25px auto;
     }
   }
 
@@ -166,7 +215,11 @@
     background-color: $c_base;
     border: none;
   }
-  /*это правильно?*/
+
+  &__besure {
+    display: none;
+  }
+
   input::-webkit-input-placeholder,
   textarea::-webkit-input-placeholder{
     color: black;
@@ -176,6 +229,7 @@
 
 @media #{$tablet-width} {
   .form {
+    width: 85%;
     display: flex;
     flex-wrap: wrap;
     margin: 0 auto;
@@ -186,17 +240,6 @@
       width: 49%;
       margin: 0;
       margin-bottom: 20px;
-    }
-
-    &__login:before {
-      content: "";
-      position: absolute;
-      top: 178px;
-      left: -141px;
-      width: 290px;
-      height: 1px;
-      background-color: #dbdbdb;
-      transform: rotate(90deg);
     }
 
     &__login-container {
@@ -261,27 +304,30 @@
       margin: 0;
       text-align: right;
     }
+
     &__impression {
+      position: relative;
       width: 50%;
       margin-bottom: 20px;
       order: -1;
     }
 
     &__impression-list {
+      margin-top: 60px;
 
       li {
-        margin-top: 60px;
+        margin-top: 0;
         margin-bottom: 0;
       }
     }
     &__attractions {
       width: 100%;
-      margin-bottom: 28px;
     }
 
     &__attractions-list {
-      width: 72%;
-      margin: 0 auto;
+      width: 80%;
+      margin-top: 40px;
+      margin-left: 15%;
       padding-bottom: 10px;
       display: flex;
       flex-wrap: wrap;
@@ -289,8 +335,9 @@
       li {
         width: 50%;
         margin: 0 auto;
-        margin-top: 58px;
-        margin-bottom: 10px;
+        margin-bottom: 30px;
+        padding: 15px 0;
+        text-align: center;
       }
     }
 /* не могу проставить номер правильно
@@ -304,13 +351,12 @@
       margin-bottom: 52px;
 
       textarea {
-        width: 80%;
+        width: 95%;
         margin-top: 35px;
       }
     }
     button {
-      width: 40%;
-      margin-left: 65px;
+      width: 50%;
     }
 
     &__line {
@@ -325,18 +371,27 @@
       height: 1px;
       background-color: #dbdbdb;
     }
+
     &__line:after {
       right: 0;
     }
+
     &__line:before {
       left: 0;
+    }
+
+    &__besure {
+      width: 50%;
+      display: inline;
+      padding: 20px 0;
+      text-align: right;
     }
   }
 }
 
 @media #{$desctop-width} {
   .form {
-    width: 72%;
+    width: 80%;
     margin-top: -40px;
 
     &__login-container {
@@ -351,6 +406,7 @@
     }
 
     &__contacts {
+
       label {
         margin-left: 0;
       }
@@ -367,15 +423,16 @@
     &__contacts-tel {
       width: 42%;
       margin-bottom: 0;
+      margin-right: 8%;
       align-items: center;
 
       label {
         width: 20%;
-        margin-right: 5%;
+        margin-right: 2%;
         order: 2;
       }
       label:before {
-        content: "";
+        display: none;
       }
     }
 
@@ -383,9 +440,14 @@
       width: 66%;
 
       &--width {
-        width: 75%;
+        width: 78%;
       }
     }
+
+    &__icon:before {
+      top: 0;
+    }
+
     &__error {
       width: 100%;
       margin-bottom: 7px;
@@ -396,20 +458,29 @@
       width: 50%;
       display: flex;
       align-items: center;
-      margin-left: 10%;
       margin-top: 30px;
 
       label {
-        margin-right: 4%;
+        margin-right: 20px;
+      }
+    }
+
+    &__impression-list {
+
+      li {
+        margin-left: 6px;
+        margin-bottom: 21px;
       }
     }
 
     &__attractions {
-      margin-bottom: 32px;
+      margin-bottom: 37px;
     }
 
     &__attractions-list {
       width: 100%;
+      margin: 0 auto;
+      margin-top: 30px;
 
       li {
         width: 25%;
