--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -56,7 +56,6 @@
   }
 
   &__list {
-    outline: 1px solid black;
     position: relative;
     margin-top: 26px;
     padding-left: 70px;
@@ -101,6 +100,7 @@
 
     &__wrapper {
       display: flex;
+      width: 100%;
 
       &--transfer{
         flex-wrap: wrap;
@@ -113,7 +113,6 @@
 
     &__item {
       width: calc(100% / 3);
-      /*height: 225px;*/
       padding-top: 0;
       padding-bottom: 0;
 
@@ -153,7 +152,7 @@
       overflow: hidden;
 
       img {
-        /*position: absolute;*/
+        position: absolute;
         top: 0px;
         bottom: 0;
         left: 0;
