--- a/sass/variables.scss
+++ b/sass/variables.scss
@@ -5,6 +5,7 @@ $c_white: #ffffff;
 $c_black: #000000;
 $c_gray: #333333;
 $bg_gray: #eeeeee;
+$c_icon: #f2f2f2;
 
 $mobile-width: "(max-width: 767px)";
 $tablet-width: "(min-width: 768px)";
