--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -61,7 +61,7 @@
     padding-left: 70px;
     padding-top: 5px;
   }
-
+/*не работает спрайт*/
   &__list:before {
     content: "";
     position: absolute;
@@ -69,8 +69,19 @@
     left: 0;
     width: 75px;
     height: 73px;
-    background: url(../../img/icon-house.svg) center no-repeat;
     background-size: 40px auto;
+  }
+
+  &__list--house:before {
+    background: url(../../img/icon-house.svg) center no-repeat;
+  }
+
+  &__list--gift:before {
+    background: url(../../img/icon-gift.svg) center no-repeat;
+  }
+
+  &__list--burger:before {
+    background: url(../../img/icon-burger.svg) center no-repeat;
   }
 
   &__list-title {
@@ -180,12 +191,11 @@
     }
 
     &__list:before {
-    top: 30px;
+    top: 20px;
     left: 0;
     width: 100%;
-    height: 73px;
-    background: url(../../img/icon-house.svg) center center no-repeat;
-    background-size: 75px auto;
+    height: 100px;
+    background-size: 70px auto;
   }
 
     &__list-title {
