--- a/sass/blocks/intro.scss
+++ b/sass/blocks/intro.scss
@@ -4,37 +4,14 @@
   margin-bottom: 25px;
   @include container-fluid;
 
-  @media #{$tablet-width} {
-    margin-bottom: 50px;
-  }
-
   &--hide {
     margin-bottom: 27px;
-
-    @media #{$tablet-width} {
-      margin-bottom: 47px;
-    }
-
-    @media #{$desctop-width} {
-      margin-bottom: 70px;
-    }
   }
 
   &__title {
     font-size: 18px;
     margin: 0 auto;
     margin-bottom: 27px;
-
-    @media #{$tablet-width} {
-      font-size: 21px;
-      width: 445px;
-    }
-    &--fsize {
-      @media #{$tablet-width} {
-        font-size: 30px;
-        margin-bottom: 31px;
-      }
-    }
   }
 
   &__text {
@@ -42,17 +19,50 @@
     margin-right: 20px;
     color: $c_gray;
 
-    @media #{$tablet-width} {
-      margin: 0 auto;
-    }
     &--lineh {
       line-height: 24px;
+    }
+  }
+}
 
-      @media #{$tablet-width} {
+@media #{$tablet-width} {
+  .intro {
+    margin-bottom: 50px;
+
+    &--hide {
+      margin-bottom: 47px;
+    }
+
+    &__title {
+      font-size: 21px;
+      width: 445px;
+
+      &--fsize {
+        font-size: 30px;
+        margin-bottom: 31px;
+      }
+    }
+
+    &__text {
+      margin: 0 auto;
+
+      &--lineh {
         width: 60%;
       }
+    }
+  }
+}
 
-      @media #{$desctop-width} {
+@media #{$desctop-width} {
+  .intro {
+
+    &--hide {
+      margin-bottom: 70px;
+    }
+
+    &__text {
+
+      &--lineh {
         width: 41%;
       }
     }
