--- a/sass/blocks/doubt.scss
+++ b/sass/blocks/doubt.scss
@@ -5,31 +5,36 @@
   margin-bottom: 32px;
   padding-top: 37px;
 
-  @media #{$tablet-width} {
+  &__title{
+    font-size: 18px;
+    font-weight: 700;
+    margin-bottom: 25px;
+  }
+
+  &__text{
+    line-height: 24px;
+    color: $c_gray;
+  }
+}
+
+@media #{$tablet-width} {
+  .doubt {
     width: 55%;
     margin-top: 24px;
     margin-bottom: 70px;
     border-top: none;
   }
 
-  @media #{$desctop-width} {
+  &__title {
+    margin-bottom: 30px;
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
+
+@media #{$desctop-width} {
+  .doubt {
     width: 35%;
     margin-top: 33px;
-  }
-
-  &__title{
-    font-size: 18px;
-    font-weight: 700;
-    margin-bottom: 25px;
-
-    @media #{$tablet-width} {
-      margin-bottom: 30px;
-      font-size: 30px;
-      line-height: 30px;
-    }
-  }
-  &__text{
-    line-height: 24px;
-    color: $c_gray;
   }
 }
