--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -3,12 +3,14 @@
   margin-top: 50px;
   margin-bottom: 28px;
 
-  @media #{$tablet-width} {
-    margin-top: 58px;
-    margin-bottom: 27px;
-  }
-
   img {
     width: 100%;
+  }
+}
+
+@media #{$tablet-width} {
+  .map {
+    margin-top: 58px;
+    margin-bottom: 27px;
   }
 }
