--- a/sass/blocks/social-links.scss
+++ b/sass/blocks/social-links.scss
@@ -1,15 +1,34 @@
 .social-links {
+  display: flex;
+  justify-content: center;
 
   &__common {
+    position: relative;
+    width: 46px;
+    height: 48px;
+    margin-right: 5px;
+    background-color: $c_base;
+  }
 
-    &--tw {
+  &__common:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-size: 20px auto;
+  }
 
-    }
-    &--fb {
+  &__common--tw:before {
+    background: url(../../img/icon-twitter.svg) center no-repeat;
+  }
 
-    }
-    &--yut {
+  &__common--fb:before {
+    background: url(../../img/icon-facebook.svg) center no-repeat;
+  }
 
-    }
+  &__common--yut:before {
+    background: url(../../img/icon-youtube.svg) center no-repeat;
   }
 }
