--- a/sass/blocks/map.scss
+++ b/sass/blocks/map.scss
@@ -1,10 +1,24 @@
 .map {
+  position: relative;
   margin: 0 auto;
   margin-top: 50px;
   margin-bottom: 28px;
 
   img {
     width: 100%;
+    height: auto;
+    display: block;
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    top: 47%;
+    left: 47%;
+    width: 27px;
+    height: 27px;
+    background: url(../../img/icons/icon-map-marker.svg) center no-repeat;
+    background-size: 27px auto;
   }
 }
 
@@ -12,5 +26,9 @@
   .map {
     margin-top: 58px;
     margin-bottom: 27px;
+
+    &:after {
+      left: 49%;
+    }
   }
 }
