--- a/sass/blocks/reasons.scss
+++ b/sass/blocks/reasons.scss
@@ -127,6 +127,7 @@
       width: calc(100% / 3);
       padding-top: 0;
       padding-bottom: 0;
+      border-top: none;
 
       p {
         width: 66%;
